# jutge

./: .gitignore  README.md  fix_end_newline.sh  grade_repo.py  requeriments.txt  setup.cfg  setup.py  utils.py
.github/workflows/: publish-to-test-pypi.yml
judge/: sql_judge.py
src/: check_repo.py  grade_repo.py
src/judge/: java_judge.py
src/jutge/: check_repo.py  grade_repo.py
src/jutge/judges/: java_judge.py  sql_judge.py
src/jutge/models/: exercise.py  unit_test.py
tests/sql/: create_schema.sql  runtime.sql  tests_sql.yml  timeout.sql
