[metadata]
name = jutge-joapuiib
version = 1.0.0
author = joapuiib
author_email = joapuiib@gmail.com
description = CLI Judge to validate SQL and Java exercises
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joapuiib/jutge
project_urls =
    Source = https://github.com/joapuiib/jutge/
    Issues = https://github.com/joapuiib/jutge/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: GNU GPT v3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ansiwrap
    pygments
    GitPython
    pyperclip
    colorama


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    grade_repo = jutge.grade_repo:main
    check_repo = jutge.check_repo:main
